force-app/main/default/objects/Order/fields/Account_Sales_Value__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Value__c</fullName>
    <formula>Account.Sales_value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sales Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>