force-app/main/default/objects/Order/fields/Afstemt__c.field-meta.xml
<CustomField>
    <fullName>Afstemt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Er order afstemt med Woocommerce?</description>
    <inlineHelpText>Er order afstemt med Woocommerce?</inlineHelpText>
    <label>AfstemtWC</label>
    <type>Checkbox</type>
</CustomField>