force-app/main/default/objects/Order/fields/Afstemt_jf_excel_tinglysning__c.field-meta.xml
<CustomField>
    <fullName>Afstemt_jf_excel_tinglysning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Afstemt jf. excel tinglysning</description>
    <label>Afstemt jf. excel tinglysning</label>
    <type>Checkbox</type>
</CustomField>