force-app/main/default/objects/Order/fields/Afstemt_Kommentar__c.field-meta.xml
<CustomField>
    <fullName>Afstemt_Kommentar__c</fullName>
    <label>Afstemt Kommentar</label>
    <type>TextArea</type>
</CustomField>