force-app/main/default/objects/Order/fields/Amount_x__c.field-meta.xml
<CustomField>
    <fullName>Amount_x__c</fullName>
    <formula>IF(ISBLANK(Effective_Provision_B_No_cancellation__c), 0, Effective_Provision_B_No_cancellation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>