force-app/main/default/objects/Order/fields/Assets_Created__c.field-meta.xml
<CustomField>
    <fullName>Assets_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assets Created</label>
    <type>Checkbox</type>
</CustomField>