force-app/main/default/objects/Order/fields/Bobehandling__c.field-meta.xml
<CustomField>
    <fullName>Bobehandling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Needs to be checked if the sale is Bobehandling</description>
    <inlineHelpText>Check this field if the order is bobehandling</inlineHelpText>
    <label>Bobehandling</label>
    <type>Checkbox</type>
</CustomField>