force-app/main/default/objects/Order/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <inlineHelpText>Note the date that the order was cancelled.</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>