force-app/main/default/objects/Order/fields/Contains_Customer_Benefit_Products__c.field-meta.xml
<CustomField>
    <fullName>Contains_Customer_Benefit_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Customer Benefit Products</label>
    <type>Checkbox</type>
</CustomField>