force-app/main/default/objects/Order/fields/Created_Hour__c.field-meta.xml
<CustomField>
    <fullName>Created_Hour__c</fullName>
    <formula>HOUR(TIMEVALUE(CreatedDate)) + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>