force-app/main/default/objects/Order/fields/DiscountGiven__c.field-meta.xml
<CustomField>
    <fullName>DiscountGiven__c</fullName>
    <label>PercentageDiscountAmount</label>
    <summarizedField>OrderItem.DiscountGiven__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>