force-app/main/default/objects/Order/fields/Effective_Partner_Provision_Value__c.field-meta.xml
<CustomField>
    <fullName>Effective_Partner_Provision_Value__c</fullName>
    <label>Effective Partner Provision Value</label>
    <summarizedField>OrderItem.Effective_Partner_Provision_Value__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>