force-app/main/default/objects/Order/fields/Effective_Provision_B_No_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Effective_Provision_B_No_cancellation__c</fullName>
    <formula>IF(ISPICKVAL( Status , &quot;Canceled&quot;),0, Effective_Provision_Base__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Provision B. - No cancellation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>