force-app/main/default/objects/Order/fields/Effective_Provision_Base__c.field-meta.xml
<CustomField>
    <fullName>Effective_Provision_Base__c</fullName>
    <label>Effective Provision Base</label>
    <summarizedField>OrderItem.Effective_Provision_Base__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>