force-app/main/default/objects/Order/fields/Fixed_discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Fixed_discount_Type__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fixed Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>