force-app/main/default/objects/Order/fields/Formatted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Hours__c</fullName>
    <formula>IF( 
     LEN(  TEXT(Created_Hour__c) ) = 1, 
          &apos;0&apos; + TEXT(Created_Hour__c) + &apos;:00 - 0&apos; + TEXT(Created_Hour__c) + &apos;:59&apos;,
          TEXT(Created_Hour__c) + &apos;:00 - &apos; + TEXT(Created_Hour__c) + &apos;:59&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Hours</label>
    <type>Text</type>
</CustomField>