force-app/main/default/objects/Order/fields/gtepagt_Status_2024__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_Status_2024__c</fullName>
    <label>Ægtepagt status - 2024</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Tinglyst</fullName>
            </value>
            <value>
                <fullName>Afvist</fullName>
            </value>
            <value>
                <fullName>Delvist tinglyst</fullName>
            </value>
            <value>
                <fullName>Ikke eksisterende</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>