force-app/main/default/objects/Order/fields/Is_from_Internal_Meeting_Booker__c.field-meta.xml
<CustomField>
    <fullName>Is_from_Internal_Meeting_Booker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is from Internal Meeting Booker</label>
    <type>Checkbox</type>
</CustomField>