force-app/main/default/objects/Order/fields/Is_Subscription_Included__c.field-meta.xml
<CustomField>
    <fullName>Is_Subscription_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subscription Included</label>
    <type>Checkbox</type>
</CustomField>