force-app/main/default/objects/Order/fields/Lead_s_Ejendomsoverdragelse_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lead_s_Ejendomsoverdragelse_Lookup__c</fullName>
    <formula>Lead__r.Ejendomsoverdragelse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead&apos;s Ejendomsoverdragelse Lookup</label>
    <type>Checkbox</type>
</CustomField>