force-app/main/default/objects/Order/fields/Meeting_Booker__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Booker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>