force-app/main/default/objects/Order/fields/Meeting_Booker_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booker_User_ID__c</fullName>
    <formula>IF(NOT(ISBLANK(Lead__r.Meeting_booker__c)), Lead__r.Meeting_booker__r.Id, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Booker User ID</label>
    <type>Text</type>
</CustomField>