force-app/main/default/objects/Order/fields/My_order__c.field-meta.xml
<CustomField>
    <fullName>My_order__c</fullName>
    <formula>$User.Id = Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My order</label>
    <type>Checkbox</type>
</CustomField>