force-app/main/default/objects/Order/fields/Non_Promotional_Sales__c.field-meta.xml
<CustomField>
    <fullName>Non_Promotional_Sales__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Promotional Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>