force-app/main/default/objects/Order/fields/Number_of_Products_in_Order__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products_in_Order__c</fullName>
    <label>Number of Products in Order</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>