force-app/main/default/objects/Order/fields/Old_Order__c.field-meta.xml
<CustomField>
    <fullName>Old_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Order</label>
    <type>Checkbox</type>
</CustomField>