force-app/main/default/objects/Order/fields/Order_Category__c.field-meta.xml
<CustomField>
    <fullName>Order_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Category</label>
    <referenceTo>Order_Category_Definition__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>