force-app/main/default/objects/Order/fields/Order_Number_no_leading__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_no_leading__c</fullName>
    <description>Returns order number without leading 0</description>
    <formula>VALUE(OrderNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number NL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>