force-app/main/default/objects/Order/fields/Order_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Price__c</fullName>
    <formula>MAX( Total_Cost__c - Total_Discount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Cost - Total Discount (Cannot go below 0)</inlineHelpText>
    <label>Order Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>