force-app/main/default/objects/Order/fields/Order_Price_Delb_fee__c.field-meta.xml
<CustomField>
    <fullName>Order_Price_Delb_fee__c</fullName>
    <formula>IF(ISPICKVAL( Status , &quot;Canceled&quot;),0,IF(ISPICKVAL( Payment_method__c ,&quot;Delbetaling&quot;),Effective_Provision_Base__c-(Effective_Provision_Base__c*0.025), Effective_Provision_Base__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provision - Ex. delb. fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>