force-app/main/default/objects/Order/fields/Order_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Order_Start_Month__c</fullName>
    <formula>MONTH( EffectiveDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Start Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>