force-app/main/default/objects/Order/fields/Order_Total_No_Fixed_Discount__c.field-meta.xml
<CustomField>
    <fullName>Order_Total_No_Fixed_Discount__c</fullName>
    <label>Order Total Without Fixed Discount</label>
    <summarizedField>OrderItem.Effective_price__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>