force-app/main/default/objects/Order/fields/Order_Total_Price_With_Discount__c.field-meta.xml
<CustomField>
    <fullName>Order_Total_Price_With_Discount__c</fullName>
    <formula>Order_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Total Price (Discount Applied)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>