force-app/main/default/objects/Order/fields/Order_Verified__c.field-meta.xml
<CustomField>
    <fullName>Order_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you have contacted the customer and verified this order, check this box.</inlineHelpText>
    <label>Order Verified?</label>
    <type>Checkbox</type>
</CustomField>