force-app/main/default/objects/Order/fields/OrderPriceNocancellation__c.field-meta.xml
<CustomField>
    <fullName>OrderPriceNocancellation__c</fullName>
    <description>Order Price - Order with status &quot;Canceled&quot;</description>
    <formula>IF(ISPICKVAL( Status , &quot;Canceled&quot;),0, Order_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Price - No cancellation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>