force-app/main/default/objects/Order/fields/Partner_Provision_Value__c.field-meta.xml
<CustomField>
    <fullName>Partner_Provision_Value__c</fullName>
    <description>Summation of all related order product Partner Provision Value</description>
    <label>Partner Provision Value</label>
    <summarizedField>OrderItem.Partner_provision_value__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>