force-app/main/default/objects/Order/fields/Partner_Sales_Value__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Value__c</fullName>
    <description>Summation of all related Partner Sales Value</description>
    <label>Partner Sales Value</label>
    <summarizedField>OrderItem.Partner_sales_value__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>