force-app/main/default/objects/Order/fields/Payment_method__c.field-meta.xml
<CustomField>
    <fullName>Payment_method__c</fullName>
    <label>Payment method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kortbetaling</fullName>
            </value>
            <value>
                <fullName>Mobilepay</fullName>
            </value>
            <value>
                <fullName>Klarna</fullName>
            </value>
            <value>
                <fullName>Direkte Bankoverførsel</fullName>
            </value>
            <value>
                <fullName>Resursbank</fullName>
            </value>
            <value>
                <fullName>Seren Pensionsfakturering</fullName>
            </value>
            <value>
                <fullName>Delbetaling</fullName>
                <isActive>false</isActive>
                <label>Afterpay</label>
            </value>
            <value>
                <fullName>Betalt selv på WWW</fullName>
                <isActive>false</isActive>
                <label>Betalt selv på WWW</label>
            </value>
            <value>
                <fullName>Dankort App</fullName>
                <isActive>false</isActive>
                <label>Dankort App</label>
            </value>
            <value>
                <fullName>Faktura</fullName>
                <isActive>false</isActive>
                <label>Faktura</label>
            </value>
            <value>
                <fullName>Forbrugsforeningen</fullName>
                <isActive>false</isActive>
                <label>Forbrugsforeningen</label>
            </value>
            <value>
                <fullName>Likvido - 2 måneder</fullName>
                <isActive>false</isActive>
                <label>Likvido - 2 måneder</label>
            </value>
            <value>
                <fullName>Likvido - 4 måneder</fullName>
                <isActive>false</isActive>
                <label>Likvido - 4 måneder</label>
            </value>
            <value>
                <fullName>Likvido - 6 måneder</fullName>
                <isActive>false</isActive>
                <label>Likvido - 6 måneder</label>
            </value>
            <value>
                <fullName>Team Faktura (SE)</fullName>
                <isActive>false</isActive>
                <label>Team Faktura (SE)</label>
            </value>
            <value>
                <fullName>Viabill</fullName>
                <isActive>false</isActive>
                <label>Viabill</label>
            </value>
            <value>
                <fullName>stripe</fullName>
                <isActive>false</isActive>
                <label>stripe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>