force-app/main/default/objects/Order/fields/Payment_Method_vs_Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_vs_Price_Book_Name__c</fullName>
    <description>Payment method match pricebook</description>
    <formula>TEXT(Payment_method__c) = Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method vs. Price Book Name</label>
    <type>Checkbox</type>
</CustomField>