force-app/main/default/objects/Order/fields/Payment_order_number__c.field-meta.xml
<CustomField>
    <fullName>Payment_order_number__c</fullName>
    <label>Payment order number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>