force-app/main/default/objects/Order/fields/Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_type__c</fullName>
    <label>Payment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Betaling</fullName>
                <default>true</default>
                <label>Betaling</label>
            </value>
            <value>
                <fullName>Reserveret</fullName>
                <isActive>false</isActive>
                <label>Reserveret</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>