force-app/main/default/objects/Order/fields/PCN__c.field-meta.xml
<CustomField>
    <fullName>PCN__c</fullName>
    <formula>TEXT(Lead__r.Publisher_Campaign__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCN</label>
    <type>Text</type>
</CustomField>