force-app/main/default/objects/Order/fields/PCN_Account__c.field-meta.xml
<CustomField>
    <fullName>PCN_Account__c</fullName>
    <formula>TEXT(Account.Lead_Publisher_Campaign__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCN Account</label>
    <type>Text</type>
</CustomField>