force-app/main/default/objects/Order/fields/Platform_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Platform_Lead_ID__c</fullName>
    <label>Platform Lead ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>