force-app/main/default/objects/Order/fields/Product_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount_Amount__c</fullName>
    <description>Roll-up up all Order Product Amounts less than 0</description>
    <inlineHelpText>Roll-up up all Order Product Amounts less than 0</inlineHelpText>
    <label>Product Discount Amount</label>
    <summarizedField>OrderItem.Total_Product_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Total_Price__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>