force-app/main/default/objects/Order/fields/Promotional_Order__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promotional Order</label>
    <type>Checkbox</type>
</CustomField>