force-app/main/default/objects/Order/fields/Provision_Amount__c.field-meta.xml
<CustomField>
    <fullName>Provision_Amount__c</fullName>
    <description>Sum of Provision Amount on Order Products (Including negative amounts e.g. from Discount Products)</description>
    <inlineHelpText>Sum of Provision Amount on Order Products (Including negative amounts e.g. from Discount Products)</inlineHelpText>
    <label>Provision Amount</label>
    <summarizedField>OrderItem.Provision_Amount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>