force-app/main/default/objects/Order/fields/Provision_Base__c.field-meta.xml
<CustomField>
    <fullName>Provision_Base__c</fullName>
    <description>Summation of all related order product Provision Base value</description>
    <label>Provision Base</label>
    <summarizedField>OrderItem.Provision_base__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>