force-app/main/default/objects/Order/fields/Provision_Value__c.field-meta.xml
<CustomField>
    <fullName>Provision_Value__c</fullName>
    <description>Accumulated Provision after deducting Order-wide discounts (e.g. Fixed Discount Amount) and refunds</description>
    <formula>MAX(Provision_Amount__c - Fixed_discount_Type__c - Refund_Value__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Accumulated Provision after deducting Order-wide discounts (e.g. Fixed Discount Amount) and refunds</inlineHelpText>
    <label>Provision Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>