force-app/main/default/objects/Order/fields/Reference_givet__c.field-meta.xml
<CustomField>
    <fullName>Reference_givet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference givet</label>
    <type>Checkbox</type>
</CustomField>