force-app/main/default/objects/Order/fields/Reference_Lead__c.field-meta.xml
<CustomField>
    <fullName>Reference_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Lead</label>
    <type>Checkbox</type>
</CustomField>