force-app/main/default/objects/Order/fields/Refund_Value__c.field-meta.xml
<CustomField>
    <fullName>Refund_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of money refunded to the customer</description>
    <inlineHelpText>The amount of money refunded to the customer</inlineHelpText>
    <label>Refund Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>