force-app/main/default/objects/Order/fields/Sales_match_order__c.field-meta.xml
<CustomField>
    <fullName>Sales_match_order__c</fullName>
    <description>Returns true if order value matches manual sales value field</description>
    <formula>(Account_Sales_Value__c = Order_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales match order</label>
    <type>Checkbox</type>
</CustomField>