force-app/main/default/objects/Order/fields/Subscription_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Renewal</label>
    <type>Checkbox</type>
</CustomField>