force-app/main/default/objects/Order/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Roll-up up all Order Product Amounts greater than 0</description>
    <inlineHelpText>Roll-up up all Order Product Amounts greater than 0</inlineHelpText>
    <label>Total Cost</label>
    <summarizedField>OrderItem.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Total_Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>