force-app/main/default/objects/Order/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <formula>ABS( BLANKVALUE(Product_Discount_Amount__c, 0) )
+ ABS( BLANKVALUE(Fixed_discount_Type__c,      0) )
+ ABS( BLANKVALUE(DiscountGiven__c,            0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Discount Amount + Fixed Discount Amount + Percentage Discount Amount</inlineHelpText>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>