force-app/main/default/objects/Order/fields/TotalProvisionBase__c.field-meta.xml
<CustomField>
    <fullName>TotalProvisionBase__c</fullName>
    <label>TotalProvisionBase</label>
    <summarizedField>OrderItem.Provision_base__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>