force-app/main/default/objects/Order/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <label>UTM Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gratis raadgivning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>