force-app/main/default/objects/Order/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <label>UTM Content</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gratis foredrag om arv og testamente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>