force-app/main/default/objects/Order/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billetto</fullName>
            </value>
            <value>
                <fullName>Nyhedsbreve</fullName>
            </value>
            <value>
                <fullName>Leadad</fullName>
            </value>
            <value>
                <fullName>Outgrow</fullName>
            </value>
            <value>
                <fullName>Retargeting</fullName>
            </value>
            <value>
                <fullName>Cube</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Forsikringshj�lp</fullName>
            </value>
            <value>
                <fullName>LassoX</fullName>
            </value>
            <value>
                <fullName>Inmix</fullName>
            </value>
            <value>
                <fullName>Min Mave</fullName>
            </value>
            <value>
                <fullName>Forbrugsforeningen</fullName>
            </value>
            <value>
                <fullName>Danske seniorer</fullName>
            </value>
            <value>
                <fullName>Dinfamiliejurist.dk</fullName>
            </value>
            <value>
                <fullName>eGentic</fullName>
            </value>
            <value>
                <fullName>eGentic/Premio</fullName>
            </value>
            <value>
                <fullName>BoligAdvokat24</fullName>
            </value>
            <value>
                <fullName>Adservice</fullName>
            </value>
            <value>
                <fullName>Egne influencers</fullName>
            </value>
            <value>
                <fullName>Crowdio</fullName>
            </value>
            <value>
                <fullName>Jyllandsposten</fullName>
            </value>
            <value>
                <fullName>dagensinfo</fullName>
            </value>
            <value>
                <fullName>MakeInfluence</fullName>
            </value>
            <value>
                <fullName>Popermo</fullName>
            </value>
            <value>
                <fullName>Ukendt</fullName>
            </value>
            <value>
                <fullName>Dinfamiljejurist.nu</fullName>
            </value>
            <value>
                <fullName>Tilmeldingsblanket</fullName>
            </value>
            <value>
                <fullName>Impressive Relations</fullName>
            </value>
            <value>
                <fullName>Andet</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>