force-app/main/default/objects/Order/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <label>UTM Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Foredrag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>